--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,6 @@
 <!-- jQUERY -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+<!-- <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.11.2.min.js"><\/script>')</script> -->
 <!-- CONCAT FILES WITH CUSTOM JS -->
 <script src='{{ "/js/min/main.min.js" | relative_url }}'></script>
 <!-- WEB FONTS LOADER -->
@@ -8,8 +8,8 @@
 <script>
 WebFont.load({
 google: {
-families: [
-'Catamaran:100,200,300,400,500,600,700,800,900'
-]}
+	families: [
+	'Catamaran:100,200,300,400,500,600,700,800,900'
+	]}
 });
 </script>
