--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,17 +24,17 @@ layout: default
       </div>
       <div class="story_column-block">
         <div class="story_column faded ">
-          <p>I'm a Designer based in Barcelona who loves sports and has been <a href="https://www.wefoundarobot.com/">traveling</a> around the world during 2017. My couple and I started in St.Petersburg last March and we are about to finish in San Francisco.</p>
-          <p>Before that decision, I was working at <a href="http://lola-mullenlowe.com/">LOLA</a> [Mullenlowe Group] leading a small team of 3 other designers. Being such a small group, we got a really big project in our hands: Rethink &amp; Improve the Global Digital Ecosystem of the largest Spanish automotive brand, SEAT.</p>
+          <p>I'm a Designer based in Barcelona who loves sports and has been <a href="https://www.wefoundarobot.com/" target="_blank" rel="noopener noreferrer">traveling</a> around the world during 2017. My couple and I started in St.Petersburg last March and we are about to finish in San Francisco.</p>
+          <p>Before that decision, I was working at <a href="http://lola-mullenlowe.com/" target="_blank" rel="noopener noreferrer">LOLA</a> [Mullenlowe Group] leading a small team of 3 other designers. Being such a small group, we got a really big project in our hands: Rethink &amp; Improve the Global Digital Ecosystem of the largest Spanish automotive brand, SEAT.</p>
         </div>
         <div class="story_column faded delay-2">
-          <p>Previously, I worked for a really cool company called <a href="https://www.linkedin.com/company/675629/">Mobivery</a>. There I crafted tons of mobile applications for all the clients and platforms you can imagine. Also, I had the opportunity to work on <a href="https://www.linkedin.com/company/2319614/">Malcom</a>, a SaaS for Mobile Marketing that combined push, analytics and a layer of BI.</p>
+          <p>Previously, I worked for a really cool company called <a href="https://www.linkedin.com/company/675629/" target="_blank" rel="noopener noreferrer">Mobivery</a>. There I crafted tons of mobile applications for all the clients and platforms you can imagine. Also, I had the opportunity to work on <a href="https://www.linkedin.com/company/2319614/" target="_blank" rel="noopener noreferrer">Malcom</a>, a SaaS for Mobile Marketing that combined push, analytics and a layer of BI.</p>
           <p>
-            In the side, I taught design in schools like <a href="https://www.ironhack.com/">Ironhack</a> or TheAppSchool and directly to design teams inside companies like Schneider Electrics or TV3.</p>
+            In the side, I taught design in schools like <a href="https://www.ironhack.com/" target="_blank" rel="noopener noreferrer">Ironhack</a> or TheAppSchool and directly to design teams inside companies like Schneider Electrics or TV3.</p>
           </div>
           <div class="story_column_small faded delay-4">
             <ul class="story-list">
-              <li class="list_item"><span>2011</span>Mobivery</li>
+              <li class="list_item"><span>2010</span>Mobivery</li>
               <li class="list_item"><span>2014</span>LOLA [Mullenlowe]</li>
               <li class="list_item"><span>2017</span>The Earth  <span class="planet">🌏</span></li>
               <li class="list_item"><span>2018</span><a href="mailto:hello@dgallardo.com" id="company">Your company?</a></li>
@@ -60,14 +60,14 @@ layout: default
                 </div>
               <div class="item_image-block item_image-block_{{ post.number }}">
                 <div class="item_title title_desktop faded">
-                  <a href="http://www.seat.com"><h3><span>SEAT </span> <span>GLOBAL </span> <span>WEBSITE </span> <span>&amp; </span> <span>CAR </span> <span>CONFIG.</span></h3></a>
+                  <a href="http://www.seat.com" target="_blank" rel="noopener noreferrer"><h3><span>SEAT </span> <span>GLOBAL </span> <span>WEBSITE </span> <span>&amp; </span> <span>CAR </span> <span>CONFIG.</span></h3></a>
                 </div>
               </div>
-              <div class="item_copy-block faded">
+              <div class="item_copy-block">
                 <div class="item_copy-block_inner">
                   <div class="item_subtitle">{{post.type}}</div>
                   <p class="item_copy">{{post.excerpt}}</p>
-                  <a href="http://www.seat.com" class="case-link">Visit Website</a>
+                  <a href="http://www.seat.com" class="case-link" target="_blank" rel="noopener noreferrer">Visit Website</a>
                 </div>
               </div>
             </li>
@@ -75,18 +75,18 @@ layout: default
           {% if post.number == "02" %}
             <li id="robot-case" class="showcase_item">
               <div class="item_title title_mobile">
-                  <a href="https://www.wefoundarobot.com"><h3><span>WE </span> <span>FOUND </span> <span>A </span> <span>ROBOT </span> <span>- </span><span>TRAVEL </span> <span>BLOG</span></h3></a>
+                  <a href="https://www.wefoundarobot.com" target="_blank" rel="noopener noreferrer"><h3><span>WE </span> <span>FOUND </span> <span>A </span> <span>ROBOT </span> <span>- </span><span>TRAVEL </span> <span>BLOG</span></h3></a>
                 </div>
               <div class="item_image-block item_image-block_{{ post.number }} faded">
                 <div class="item_title title_desktop faded">
                   <a href="https://www.wefoundarobot.com"><h3><span>WE </span> <span>FOUND </span> <span>A </span> <span>ROBOT </span> <span>- </span><span>TRAVEL </span> <span>BLOG</span></h3></a>
                 </div>
               </div>
-              <div class="item_copy-block faded">
+              <div class="item_copy-block">
                 <div class="item_copy-block_inner">
                   <div class="item_subtitle">{{post.type}}</div>
                   <p class="item_copy">{{post.excerpt}}</p>
-                  <a href="https://www.wefoundarobot.com" class="case-link">Visit Website</a>
+                  <a href="https://www.wefoundarobot.com" class="case-link" target="_blank" rel="noopener noreferrer">Visit Website</a>
                 </div>
               </div>
             </li>
@@ -131,7 +131,7 @@ layout: default
           <div class="grid-item item-04">
             <figure class="item-image faded">
               <img src="/images/grid/wfa.png" alt="WFA Website Concept">
-              <figcaption class="item-copy">World Federation of Advertisers Website Concept</figcaption>
+              <figcaption class="item-copy">World Federation of Advertisers Website Proposal</figcaption>
             </figure>
           </div>
         </div>
