--- a/_scss/helpers/_mixins.scss
+++ b/_scss/helpers/_mixins.scss
@@ -106,8 +106,8 @@ $radius: 2px;
   animation-duration:0s;//MEDIA QUERY
   @include media($m){
     opacity: 0;
-    animation-duration:.5s;
-    animation-fill-mode:both
+    animation-duration:.75s;
+    animation-fill-mode: both;
   }
 }
 .animated.infinite {  animation-iteration-count: infinite; }
