--- a/_scss/layouts/home.scss
+++ b/_scss/layouts/home.scss
@@ -275,8 +275,9 @@
 .contact{
   text-align: center;
   display: block;
-  padding: 6rem 0;
+  padding: 3rem 0;
   @include clearfix;
+  border-top: 1px solid $dividers;
   @include media($m) {
     padding: 8rem 0 6rem 0;
     display: block;
