--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,7 @@
 
 * {
   box-sizing: border-box;
+
   @media (min-width: 768px) {
     box-sizing: content-box;
   }
@@ -17,6 +18,7 @@
 
 .cursor {
   display: none;
+
   @media (min-width: 576px) {
     display: block;
     position: fixed;
@@ -70,6 +72,7 @@ h1 {
   font-weight: 500;
   font-size: 48px;
   line-height: 100%;
+
   @media (min-width: 576px) {
     font-size: 64px;
     line-height: 92%;
@@ -85,6 +88,7 @@ h2 {
   margin: 0;
   margin-bottom: 32px;
   letter-spacing: -0.2px;
+
   @media (min-width: 768px) {
     font-size: 63px;
     line-height: 72px;
@@ -100,6 +104,7 @@ p {
   line-height: 40px;
   margin: 0;
   margin-bottom: 12px;
+
   @media (min-width: 768px) {
     font-size: 28px;
     line-height: 48px;
@@ -112,6 +117,7 @@ a {
   text-decoration: none;
   position: relative;
   transition: .3s all;
+
   &:after {
     content: '';
     width: 100%;
@@ -123,10 +129,12 @@ a {
     opacity: .6;
     transition: .3s all;
   }
+
   &:hover {
     color: var(--goldDark);
     transition: .3s all;
     cursor: none;
+
     &:after {
       background: var(--gold);
       transition: .3s all;
@@ -148,13 +156,16 @@ a {
   margin-left: 50%;
   transform: translateX(-50%);
   z-index: 0;
+
   .container,
   .row {
     height: 100%;
   }
+
   .inner-column {
     box-shadow: inset 6px 0px 0px var(--black), inset -6px 0px 0px var(--black), inset 7px 0px 0px var(--blackLines), inset -7px 0px 0px var(--blackLines);
   }
+
   .row {
     box-shadow: inset 1px 0px 0px var(--blackLines), inset -1px 0px 0px var(--blackLines);
   }
@@ -165,14 +176,17 @@ a {
   height: 100vh;
   max-height: 600px;
   background: var(--black);
+
   @media (min-width: 576px) {
     height: 100vh;
     max-height: 800px;
   }
+
   .inner-grid {
     .inner-column {
       box-shadow: inset 6px 0px 0px var(--black), inset -6px 0px 0px var(--black), inset 7px 0px 0px var(--blackLines), inset -7px 0px 0px var(--blackLines);
     }
+
     .row {
       box-shadow: inset 1px 0px 0px var(--blackLines), inset -1px 0px 0px var(--blackLines);
     }
@@ -183,12 +197,14 @@ a {
   margin: 0 auto;
   margin-top: 80px;
   text-align: center;
+
   img {
     margin: 0;
     margin-top: -3px;
     padding: 0;
     width: 64px;
   }
+
   @media (min-width: 576px) {
     margin-top: 160px;
   }
@@ -202,6 +218,7 @@ a {
 .title {
   margin-top: 40px;
   position: relative;
+
   @media (min-width: 576px) {
     margin-top: 80px;
   }
@@ -211,12 +228,14 @@ a {
   @media (min-width: 576px) {
     padding: 0 5px;
   }
+
   img {
     padding: 0;
     margin-top: -80px;
     max-width: 100%;
     z-index: -1;
     position: relative;
+
     @media (min-width: 576px) {
       margin-top: -112px;
     }
@@ -231,14 +250,31 @@ a {
   padding-top: 20px;
   padding-bottom: 60px;
   position: relative;
-  @media (min-width: 576px) {
+
+  @media (min-width: 440px) {
+    padding-bottom: 220px;
+    padding-top: 150px;
+  }
+
+  @media (min-width: 768px) {
+    padding-top: 150px;
+  }
+
+  @media (min-width: 992px) {
+    padding-bottom: 220px;
+    padding-top: 150px;
+  }
+
+  @media (min-width: 1200px) {
     padding-bottom: 220px;
     padding-top: 300px;
   }
+
   .inner-grid {
     .inner-column {
       box-shadow: inset 6px 0px 0px var(--sand), inset -6px 0px 0px var(--sand), inset 7px 0px 0px var(--sandLines), inset -7px 0px 0px var(--sandLines);
     }
+
     .row {
       box-shadow: inset 1px 0px 0px var(--sandLines), inset -1px 0px 0px var(--sandLines);
     }
@@ -249,6 +285,7 @@ a {
   margin-top: 150px;
   padding-left: 24px;
   z-index: 1;
+
   p {
     max-width: 80%;
   }
@@ -260,13 +297,16 @@ a {
 .projects {
   background: var(--white);
   position: relative;
+
   @media (min-width: 576px) {
     max-height: 620px;
   }
+
   .inner-grid {
     .inner-column {
       box-shadow: inset 6px 0px 0px var(--white), inset -6px 0px 0px var(--white), inset 7px 0px 0px var(--whiteLines), inset -7px 0px 0px var(--whiteLines);
     }
+
     .row {
       box-shadow: inset 1px 0px 0px var(--whiteLines), inset -1px 0px 0px var(--whiteLines);
     }
@@ -276,12 +316,15 @@ a {
 .zazu-wrap {
   position: relative;
   z-index: 4;
+
   @media (min-width: 576px) {
     padding-left: 24px;
   }
+
   img {
     max-width: 100%;
     margin-top: 32px;
+
     @media (min-width: 576px) {
       margin-top: 270px;
     }
@@ -290,12 +333,15 @@ a {
 
 .tk-wrap {
   z-index: 3;
+
   @media (min-width: 576px) {
     padding-right: 24px;
   }
+
   img {
     margin-top: 0px;
     max-width: 100%;
+
     @media (min-width: 576px) {
       margin-top: -70px;
     }
@@ -304,31 +350,37 @@ a {
 
 .zazu-caption {
   position: relative;
+
   @media (min-width: 768px) {
     width: 340px;
     position: absolute;
     right: calc(-340px - 24px);
     bottom: 40px;
   }
+
   @media (min-width: 992px) {
     width: 370px;
     position: absolute;
     right: calc(-370px - 24px);
     bottom: 40px;
   }
+
   p {
     padding-top: 48px;
     padding-bottom: 24px;
     padding-right: 12px;
     padding-left: 12px;
+
     @media (min-width: 768px) {
       font-size: 20px;
       line-height: 32px;
       padding: 0;
     }
   }
+
   a {
     transition: .3s all;
+
     &:after {
       content: '';
       width: 100%;
@@ -339,9 +391,11 @@ a {
       left: 0;
       transition: .3s all;
     }
+
     &:hover {
       color: var(--goldDark);
       transition: .3s all;
+
       &:after {
         background: var(--goldDark);
         transition: .3s all;
@@ -363,15 +417,28 @@ a {
   background: var(--sand);
   padding-top: 0px;
   padding-bottom: 60px;
+
   @media (min-width: 576px) {
     padding-bottom: 220px;
     padding-top: 300px;
   }
+
+  @media (min-width: 768px) {
+    padding-top: 150px;
+  }
+
+  @media (min-width: 992px) {
+    padding-bottom: 220px;
+    padding-top: 300px;
+  }
+
   position: relative;
+
   .inner-grid {
     .inner-column {
       box-shadow: inset 6px 0px 0px var(--sand), inset -6px 0px 0px var(--sand), inset 7px 0px 0px var(--sandLines), inset -7px 0px 0px var(--sandLines);
     }
+
     .row {
       box-shadow: inset 1px 0px 0px var(--sandLines), inset -1px 0px 0px var(--sandLines);
     }
@@ -382,6 +449,7 @@ a {
   margin-top: 130px;
   padding-left: 24px;
   z-index: 1;
+
   p {
     max-width: 90%;
   }
@@ -394,13 +462,16 @@ a {
   background: var(--black);
   height: 380px;
   position: relative;
+
   @media (min-width: 576px) {
     height: 660px;
   }
+
   .inner-grid {
     .inner-column {
       box-shadow: inset 6px 0px 0px var(--black), inset -6px 0px 0px var(--black), inset 7px 0px 0px var(--blackLines), inset -7px 0px 0px var(--blackLines);
     }
+
     .row {
       box-shadow: inset 1px 0px 0px var(--blackLines), inset -1px 0px 0px var(--blackLines);
     }
@@ -410,36 +481,44 @@ a {
 .photo-wrap {
   z-index: 1;
   display: flex;
+
   .photo-list {
     display: flex;
     margin-top: 40px;
     overflow-x: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
+
     &::-webkit-scrollbar {
       display: none;
     }
+
     @media (min-width: 576px) {
       margin-top: 100px;
     }
   }
+
   .photo {
     min-width: 300px;
     z-index: 1;
     margin: 0 12px;
+
     @media (min-width: 576px) {
       min-width: 490px;
     }
+
     &:first-child {
       @media (min-width: 576px) {
         padding-left: 48px;
       }
     }
+
     &:last-child {
       @media (min-width: 576px) {
         padding-right: 48px;
       }
     }
+
     img {
       width: 100%;
     }
@@ -452,13 +531,16 @@ a {
 .keepintouh {
   background: var(--sand);
   position: relative;
+
   @media (min-width: 576px) {
     padding-top: 100px;
   }
+
   .inner-grid {
     .inner-column {
       box-shadow: inset 6px 0px 0px var(--sand), inset -6px 0px 0px var(--sand), inset 7px 0px 0px var(--sandLines), inset -7px 0px 0px var(--sandLines);
     }
+
     .row {
       box-shadow: inset 1px 0px 0px var(--sandLines), inset -1px 0px 0px var(--sandLines);
     }
@@ -469,6 +551,7 @@ a {
   margin-top: 150px;
   padding-left: 24px;
   z-index: 1;
+
   p {
     max-width: 90%;
   }
@@ -482,13 +565,16 @@ a {
   padding-top: 60px;
   padding-bottom: 60px;
   position: relative;
+
   @media (min-width: 576px) {
     padding-top: 100px;
   }
+
   .inner-grid {
     .inner-column {
       box-shadow: inset 6px 0px 0px var(--sand), inset -6px 0px 0px var(--sand), inset 7px 0px 0px var(--sandLines), inset -7px 0px 0px var(--sandLines);
     }
+
     .row {
       box-shadow: inset 1px 0px 0px var(--sandLines), inset -1px 0px 0px var(--sandLines);
     }
@@ -526,19 +612,23 @@ a {
 .top-arrow-wrap {
   padding-top: 64px;
   display: none;
+
   a:after {
     display: none;
   }
+
   a img {
     opacity: .7;
     transition: all .3s;
     margin-top: 0px;
   }
+
   a:hover img {
     opacity: 1;
     transition: all .3s;
     margin-top: -4px;
   }
+
   @media (min-width: 768px) {
     display: block;
   }
